--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="./img/Untitled%20design-1.png" alt="" width="100" height="60">
+                <img src="./img/Syokinet%20Logo.jpeg" alt="IMG" class="d img-fluid" width="65px" height="65px">
             </a>
         </div>
     </nav>
