--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="./img/Syokinet%20Logo.jpeg" alt="IMG" class="d img-fluid" width="65px" height="65px">
