--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         Sorry for the inconvenience but we’re performing some maintenance at the moment.
                         we’ll be back online shortly!</p>
                     <p>
-                        — The Team</p>
+                        — Syokinet Team</p>
                 </div>
             </div>
             <div class="col-md-6">
